0.12.0    copy to system clipboard when copy to kill area
          fix width calculation with scrollbar visible
          fix exception in Firefox throw by setSelectionRange in caret plugin
          make echo sync when echo string or function (flush didn't work on codepen)
          simplify changing of terminal colors using css variables
0.11.23   add scrollBottomOffset option
0.11.22   scroll to bottom of the terminal when option scrollOnEcho is set to false but the terminal is
          at the bottom, add new api methods is_bottom and scroll_to_bottom.
0.11.21   don't scroll to terminal (using caret plugin) when it's disabled
0.11.20   don't convert links to formatting when raw option is true
0.11.19   fix getting data from local storage
          remove spell check and auto capitalize from textarea
0.11.18   fix input method
0.11.17   fix echo when line is short and have newlines
0.11.16   add versioned files to npmignore
          add global and echo option wrap to disable long line wrapping
          don't send warning when mime for JSON-RPC is text/json
0.11.15   replace json_stringify with JSON.stringify
0.11.14   fix focus on desktop
0.11.13   allow only memory storage with memory option set to true
0.11.12   fix focus on mobile
0.11.11   fix do not enable the terminal on click if it's frozen
0.11.10   fix focus on click
0.11.9    fix outputLimit option
0.11.8    add scrollOnEcho option
0.11.7    fix History::last
0.11.6    fix flush new API method $.terminal.last_id
0.11.5    fix focus on Android
0.11.4    allow to change completion using option API method
0.11.3    add echoCommand option
0.11.2    allow to select text using double click
0.11.1    fix exec login from hash
          allow to pause with visible command line
          new api method clear_history_state
0.11.0    fix default prompt for push
          add word-wrap: break-word for cases when echo html that have long lines
          fix login function as setting when used with JSON-RPC