@@ -169,7 +169,17 @@
           color: var(--background, #000);
       }
     }
-
+	.cmd .cursor.blink {
+		-webkit-animation: var(--animation, terminal-blink) 1s infinite steps(1, start);
+		   -moz-animation: var(--animation, terminal-blink) 1s infinite steps(1, start);
+			-ms-animation: var(--animation, terminal-blink) 1s infinite steps(1, start);
+				animation: var(--animation, terminal-blink) 1s infinite steps(1, start);
+		color: var(--color);
+		border-left: 1px solid transparent;
+		background-color: var(--background);
+		margin-left: -1px;
+		background-clip: content-box;
+	}
     @-moz-keyframes terminal-blink {
       0%, 100% {
           background-color: var(--background, #000);
@@ -190,6 +200,38 @@
           color: var(--background, #000);
       }
     }
+	@-webkit-keyframes terminal-bar {
+	  0%, 100% {
+		  border-left-color: var(--color, #aaa);
+	  }
+	  50% {
+		  border-left-color: var(--background, #000);
+	  }
+	}
+	@-ms-keyframes terminal-bar {
+	  0%, 100% {
+		  border-left-color: var(--color, #aaa);
+	  }
+	  50% {
+		  border-left-color: var(--background, #000);
+	  }
+	}
+	@-moz-keyframes terminal-bar {
+	  0%, 100% {
+		  border-left-color: var(--color, #aaa);
+	  }
+	  50% {
+		  border-left-color: var(--background, #000);
+	  }
+	}
+	@keyframes terminal-bar {
+	  0%, 100% {
+		  border-left-color: var(--color, #aaa);
+	  }
+	  50% {
+		  border-left-color: var(--background, #000);
+	  }
+	}
 }
 .terminal-output > div {
     /*padding-top: 3px;*/
