@@ -3,6 +3,7 @@
           fix exception in Firefox throw by setSelectionRange in caret plugin
           make echo sync when echo string or function (flush didn't work on codepen)
           simplify changing of terminal colors using css variables
+          add bar cursor animation a a way to enable it with single css variable
 0.11.23   add scrollBottomOffset option
 0.11.22   scroll to bottom of the terminal when option scrollOnEcho is set to false but the terminal is
           at the bottom, add new api methods is_bottom and scroll_to_bottom.
